# comprs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/coding/: base.rs  decoder.rs  encoder.rs
src/encodings/: bwt.rs  mod.rs  mtf.rs  rle.rs  startransform.rs
src/encodings/arithmetic_coder/: base.rs  decoder.rs  encoder.rs  mod.rs
src/encodings/ppm/: context.rs  mod.rs  model.rs
src/ppm/: context.rs  mod.rs  model.rs
src/preprocessors/: bwt.rs  mod.rs  mtf.rs  rle.rs  startransform.rs
src/utils/: mod.rs
