[package]
name = "comprs"
version = "0.1.0"
authors = ["michael.egger@tsn.at"]

[dependencies]
bitbit = "0.2.0"
clap = "2.33.0"
serde = "1.0.90"
serde_derive = "1.0.90"
bincode = "1.1.3"
log = "0.4.6"
varuint = "0.6.0"
adler32 = "1.0.3"
rayon = "1.0.3"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
# `codegen-units` is ignored when `lto = true`

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
# `codegen-units` is ignored when `lto = true`