[package]
name = "comprs"
version = "0.1.0"
authors = ["michael.egger@tsn.at"]
edition = "2018"

[dependencies]
bitbit = "0.2.0"
clap = "2.33.0"
serde = "1.0.104"
serde_derive = "1.0.104"
bincode = "1.2.1"
log = "0.4.8"
varuint = "0.6.0"
adler32 = "1.0.4"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
# `codegen-units` is ignored when `lto = true`

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
# `codegen-units` is ignored when `lto = true`